# aghPresenter

./: .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  boost.html  conanfile.txt  dc.html  poppler.html  qt.html
.github/workflows/: main.yml
AGHPresenter.app/Contents/: Info.plist
AGHPresenter.app/Contents/Frameworks/: libQt5Concurrent.5.dylib  libQt5DBus.5.dylib  libQt5DesignerComponents.5.dylib  libQt5Help.5.dylib  libQt5Network.5.dylib  libQt5OpenGL.5.dylib  libQt5PrintSupport.5.dylib  libQt5Sql.5.dylib  libQt5Test.5.dylib  libQt5Xml.5.dylib
AGHPresenter.app/Contents/PlugIns/bearer/: libqgenericbearer.dylib
AGHPresenter.app/Contents/PlugIns/imageformats/: libqgif.dylib  libqico.dylib
AGHPresenter.app/Contents/PlugIns/printsupport/: libcocoaprintersupport.dylib
AGHPresenter.app/Contents/PlugIns/sqldrivers/: libqsqlite.dylib
AGHPresenter.app/Contents/PlugIns/styles/: libqmacstyle.dylib
doc/: opis_funkcjonalnosci.md
src/: CMakeLists.txt  MacOsUtils.cpp  MacOsUtils.h  MacOsUtils.mm  MainWindow.cpp  MainWindow.h  Presentation.cpp  Presentation.h  PresentationBaseWindow.cpp  PresentationBaseWindow.h  PresentationWidget.cpp  PresentationWidget.h  PresentationWindow.cpp  PresentationWindow.h  PresenterEnums.h  PresenterWindow.cpp  PresenterWindow.h  ResizablePixmapLabel.cpp  ResizablePixmapLabel.h  SettingsDialog.cpp  SettingsDialog.h  Tab.cpp  Tab.h  TabWidget.cpp  TabWidget.h  ThumbnailsListWidget.cpp  ThumbnailsListWidget.h  Timer.cpp  Timer.h  main.cpp  main.h  resources.qrc  style.qss
src/icons/dark/: index.theme
src/icons/light/: index.theme
